SQuirreL SQL Client Change Log
==============================

${squirrelsql.changelog.header}

Not yet released, available in our GIT repository and in future snapshots and releases.
===============================================================================================

Enhancements:

Upgraded to the latest RSyntax version (2.5.3).


Bug fixes:

Tool bar of SQL Worksheet was doubled any time it was moved from between different frames.

#1174 PostgreSQL: create table script: wrong data type numeric

3.6.0 (10/12/2014)
==================

Enhancements:

When adjusting table column widths a maximum width may now be defined.
  See menu File --> Global Preferences --> Tab General --> right column

Speeded up reading and writing Alias properties. As result opening and closing a connections will be much faster for big, complicated databases.
  Thanks to Jaroslaw Jarmolowicz for the patch

Starting and stopping Squirell is much faster for big, complicated databases
  Thanks to Jaroslaw Jarmolowicz for the patch

Postgres Plugin:
- For postgres query plans explain was used which is less accurate than explain analyze so it was changed to use it instead.
- Previous implementation had limitation of producing query plans only for SELECT queries. It was changed so query plan can work for every type of query.
- Query plan executions are wrapped in transaction so they don't change database state.
Thanks to Jaroslaw Jarmolowicz for the patch


Bug fixes:

#618 SQLParam plugin asks for commented variable.
 Thanks to Michal Stekrt for the patch.


Postgres Plugin:
- Postgres locks table was not displayed.
Thanks to Jaroslaw Jarmolowicz for the patch

Look-and-Feel Plugin: JTattoo-AluminiumLookAndFeel was not available and logged an exception stack trace during start up.

SQuirreL used log an exception stack trace when 'Keep-Alive' was enabled in Alias properties but no SQL statement was entered. Now SQuirreL issues an understandable message.